feat: 홈화면 일정 완료 기능
